# calc

./: .gitignore  .gitmodules  CLAUDE.md  Makefile  README.md
android/: gradle.properties  watch.sh
android/app/: build.gradle.kts
android/app/src/main/cpp/cemu/: CMakeLists.txt  cemu_adapter.c  emu.h
core/.cargo/: config.toml
core/examples/: clean_trace.rs  debug.rs  keypad_debug.rs  trace_boot.rs
core/include/: emu.h
core/src/: bus.rs  cpu.rs  emu.rs  keypad_integration_test.rs  lib.rs  memory.rs  scheduler.rs  wasm.rs
core/src/cpu/: execute.rs  helpers.rs  mod.rs
core/src/peripherals/: control.rs  interrupt.rs  keypad.rs  lcd.rs  mod.rs  panel.rs  rtc.rs  sha256.rs  spi.rs  timer.rs
docs/: cemu-comparison.md  findings.md  milestones.md  trace-comparison.md
ios/: README.md
ios/Calc/: CalcApp.swift  ContentView.swift
ios/Calc.xcodeproj/: project.pbxproj
ios/Calc/Bridge/: Calc-Bridging-Header.h  EmulatorBridge.swift  backend_bridge.c
ios/Calc/Models/: KeyDef.swift  RomStorage.swift
ios/Calc/Views/: DPadView.swift  DebugOverlayView.swift  EmulatorView.swift  KeyButton.swift  KeypadView.swift  RomLoadingView.swift
ios/cemu/: CMakeLists.txt
ios/include/: emu.h  emu_backend.h
scripts/: build-android-cemu-release.sh  build-android-cemu.sh  build.sh  compare_traces.py  gen_traces.sh
web/: .gitignore  README.md  cemu-emscripten.mk
web/src/: Calculator.tsx
web/src/assets/: rom.ts
web/src/cemu-core/: WebCEmu.d.ts
web/src/emu-core/: emu_core_bg.wasm
web/src/emulator/: CEmuBackend.ts  RustBackend.ts  types.ts
(+17 files in other folders)
